remove input outline on focus-visible

--- a/public/stylesheets/index.sass
+++ b/public/stylesheets/index.sass
@@ -18,12 +18,13 @@ button
   cursor: pointer
   border: none
 
-input, input:focus, input[type]
+input, input:focus, input[type], input:focus-visible
   padding: 1em
   text-align: center
   border: none
   width: 25vw
   font-weight: bold
+  outline: none
 
 .welcomeContent
   background-color: $dark-gray
