--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -9,12 +9,13 @@ button {
   cursor: pointer;
   border: none; }
 
-input, input:focus, input[type] {
+input, input:focus, input[type], input:focus-visible {
   padding: 1em;
   text-align: center;
   border: none;
   width: 25vw;
-  font-weight: bold; }
+  font-weight: bold;
+  outline: none; }
 
 .welcomeContent {
   background-color: #404040;
