--- a/public/stylesheets/index.sass
+++ b/public/stylesheets/index.sass
@@ -6,6 +6,7 @@ $gray: #f5f5f5
 $dark-gray: #404040
 $dark-gray-compliment: #404040
 $font-family: Arial, Helvetica, sans-serif
+$transparent: rgba(255,0,0,0)
 
 body, html
   margin: 0
@@ -27,7 +28,8 @@ input, input:focus, input[type], input:focus-visible
   outline: none
 
 .welcomeContent
-  background-color: $dark-gray
+  // background-color: $dark-gray
+  background-image: linear-gradient(to top, $transparent, #200093)
   height: 100%
   padding: 8%
   box-shadow: 2px 2px 5px rgb(228, 228, 228)
