--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,33 +1,65 @@
 body, html {
   margin: 0;
+  color: white;
   height: 100vh;
+  width: 50vw;
   overflow-y: hidden;
   width: 100%;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: Arial, Helvetica, sans-serif;
+  background: #000524;
+  background: radial-gradient(circle, #011d34 0%, #01223b 36%, #012643 63%, #1a3f5c 100%); }
 
 button {
   cursor: pointer;
   border: none; }
 
+.icon {
+  margin: 1rem; }
+
+#word {
+  margin-top: 2rem;
+  border-radius: 2rem; }
+
 input, input:focus, input[type], input:focus-visible {
-  padding: 1em;
+  padding: 1rem;
   text-align: center;
   border: none;
   width: 25vw;
   font-weight: bold;
   outline: none; }
 
-.welcomeContent {
-  background-image: linear-gradient(to top, rgba(255, 0, 0, 0), #200093);
+.page {
   height: 100%;
-  padding: 8%;
+  padding: 5%;
   box-shadow: 2px 2px 5px #e4e4e4;
   align-items: center;
   justify-content: center;
   text-align: center; }
-  .welcomeContent h1 {
-    color: #7dceb4; }
-  .welcomeContent p {
+  .page h1 {
+    color: white;
+    font-weight: bold; }
+  .page p {
     font-size: 1.5em; }
+
+.results {
+  margin-top: 2rem; }
+
+.welcomeContent, .results {
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto; }
+
+.welcomeContent h1 {
+  margin-bottom: 2rem; }
+
+.word-text {
+  text-align: left;
+  margin: 0 0 0 0.5rem; }
+
+.def-text {
+  text-align: left;
+  margin: 0.5rem 0 0 1rem;
+  color: #a0a0a0;
+  word-wrap: break-word; }
 
 /*# sourceMappingURL=index.css.map */
