--- a/views/index.hbs
+++ b/views/index.hbs
@@ -32,7 +32,7 @@
                data-size="large">
                 Tweet
             </a>
-            <a id="merch-btn-display" class="button" href="/">Put this on a mug!</a>
+            <a id="merch-btn-display" class="button" href="/" target="_blank" rel="noopener noreferrer">Put this on a mug!</a>
             
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
