add tab icon and 'enhanced' logo

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,12 +8,13 @@
         <link rel="stylesheet" href="/stylesheets/index.css">
         <link rel="stylesheet" href="/stylesheets/header.css">
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <link rel="icon" href="images/fictionary.png">
     </head>
     <body onload="listener()">
 
     <div class="page">
         <div class="welcomeContent">
-            <img src="images/dictionary.png" class="icon" alt="icon" width="85" height="69">
+            <img src="images/fictionary.png" class="icon" alt="icon" width="85" height="69">
             
             <h1>Welcome to Fictionary</h1>
             <h3 class="word-text">gib·ber·ish</h3>
