--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -31,7 +31,7 @@ input, input:focus, input[type], input:focus-visible {
 
 .page {
   height: 100%;
-  padding: 5%;
+  padding: 3%;
   box-shadow: 2px 2px 5px #e4e4e4;
   align-items: center;
   justify-content: center;
@@ -67,9 +67,25 @@ input, input:focus, input[type], input:focus-visible {
   word-wrap: break-word; }
 
 .twitter-share-button, .button {
-  display: flex;
+  float: left;
   margin: 0.5rem 0 0 1rem;
   transition: 5s opacity; }
+
+ul, li {
+  text-decoration: none;
+  list-style-type: none; }
+
+.merch-btn {
+  background-color: white;
+  border-radius: 4px;
+  height: 12px;
+  padding: 0.5rem;
+  font-size: small;
+  font-weight: bold; }
+
+a {
+  text-decoration: none;
+  color: black; }
 
 a, #buttons-div {
   transition: 5s opacity;
