--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,14 +27,13 @@
         </div>
 
         <div class="buttons" id="buttons-div" style="opacity: 0">
-            <a class="twitter-share-button"
-               href="https://twitter.com/intent/tweet?text=Hello%20from%20Fictionary"
-               data-size="large">
+            <a class="twitter-share-button button" id='twitterbtn'
+            href="https://twitter.com/intent/tweet?text=Come%20define%20your%20own%20words%21"
+            data-size="large">
                 Tweet
-            </a>
-            <a id="merch-btn-display" class="button" href="/">Put this on a mug!</a>
-            
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            <a id="merch-btn-display" href="/" class="button merch-btn">Get this on a mug!</a>
         </div>
     </div>
 
@@ -74,19 +73,23 @@
             .then(
                 data=>{
                     let def = data['data']['definition'];
-                    console.log(def);
                     dd.innerText = def;
                     dd.style.opacity = '1';
 
                     /* Enable merch button */
                     let str = wd.innerText + "\n" + dd.innerText;
+                    let tweet = truncateString(str, 239);
                     str = encodeURIComponent(str);
-                    console.log(`Word + definition is ${str}`);
-                    const link = `https://www.zazzle.com/fictionary_mug-168563178968739930?t_text_txt=${str}&ed=True&r=3856612`
+                    tweet = encodeURIComponent(tweet);
+                    const muglink = `https://www.zazzle.com/fictionary_mug-168563178968739930?t_text_txt=${str}&ed=True&r=3856612`
             
                     let merchBtn = document.getElementById('merch-btn-display');
-                    merchBtn.setAttribute("href", link);
-                    console.log(`Merch button hyperlink changed to ${link}`);
+                    merchBtn.setAttribute("href", muglink);
+
+                    let twitterBtn = document.getElementById('twitter-widget-0');
+                    let twitterlink = `https://twitter.com/intent/tweet?text=${tweet}`;
+                    twitterBtn.setAttribute("href", twitterlink);
+                    console.log(twitterlink);
 
                     /* Show all buttons */
                     buttondiv.style.opacity = '1';
@@ -94,6 +97,15 @@
                 })
             .catch(err=>console.log(err))
         }
+
+        
+        function truncateString(str, num) {
+            if (str.length <= num) {
+                return str;
+            }
+            return str.slice(0, num) + '...';
+        }
+
 
         function listener() {
             let textbox = document.getElementById("word");
